<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/questionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/questionOne"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/write_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionOne" />

        <TextView
            android:id="@+id/questionMath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/mathQuestion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAnswer" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionMath">

            <RadioButton
                android:id="@+id/radioOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_16" />

            <RadioButton
                android:id="@+id/radioTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_10" />

            <RadioButton
                android:id="@+id/radioThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_18" />

            <RadioButton
                android:id="@+id/radioFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_48" />
        </RadioGroup>

        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/javaQuestion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTwo" />

        <CheckBox
            android:id="@+id/checkTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="string type = ''Welcome!'';"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkOne" />

        <CheckBox
            android:id="@+id/checkThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="int sum = 0;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkTwo" />

        <CheckBox
            android:id="@+id/checkFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="int sum = null;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkThree" />

        <CheckBox
            android:id="@+id/checkFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="int int;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkFour" />

        <TextView
            android:id="@+id/logicQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/logicQuestion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkFive" />

        <EditText
            android:id="@+id/editAnswerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/write_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logicQuestion" />

        <Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAnswerTwo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>